Add branch management and checkout
## What
Implements `blobvault branch` and `blobvault checkout` — the two commands
needed to create, list, delete, and switch between branches.
## Commands added
**`blobvault branch`**
- List all branches (`*` marks the current one)
- `blobvault branch <name>` — create a branch at HEAD
- `blobvault branch -d <name>` — delete a branch (blocked if unmerged)
**`blobvault checkout <branch>`**
- Switches the working directory to the target branch
- Refuses if there are staged or unstaged changes that would be lost
- Deletes files removed by the switch, writes files added by it
- Cleans up empty directories left behind after deletions
- Rebuilds the index to match the target tree so `status` is clean after switching
## Changes
- `BranchCommand` — new command handling list/create/delete
- `CheckoutCommand` — new command handling branch switching
- `RefManager` — added `currentBranch()`, `updateHead()`, `resolveRef()`, `listBranches()`
- `listBranches()` uses `Files.walk` (recursive) instead of `Files.list` so
  slash-namespaced branch names like `ntthang/ab-123/feature` are listed correctly
- `Main` — registers both new commands